still fixing the alignment on users show page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -208,6 +208,10 @@ p.alert, p.notice {
 	padding-left: 8px;
 }
 
+.white {
+	color: white
+}
+
 .left-col-title{
 	background: #008080;
 	color: #ffffff;
